--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-      <title>террария </title>
-      <link rel="stylesheet" type="text/scc" href="css/styles.css">
+    <title>террария </title>
+    <link rel=“stylesheet” href=“style.css”>
   </head>
 <body>
     <header>
