--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <header>
         <img class="ertwr" src="https://cdn.akamai.steamstatic.com/steam/apps/105600/header.jpg?t=1666290860">
-      <a href="https://terraria.fandom.com/ru/wiki/Terraria_Wiki" > Terraria</a>
+      <a href="https://terraria.fandom.com/ru/wiki/Terraria_Wiki" >  Terraria вики (официальная)</a>
         
     </header>
 <main>
