--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@ Terraria получила множество положительных оцен
 <section >
   <article class="mitw">
       <p> Видио гайды </p>
-     <iframe width="1400" height="636" src="https://www.youtube.com/embed/bpt-EA6pLmY" title="Прохождение всей Террарии от начала до конца!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
+     <iframe width="100%" height="636" src="https://www.youtube.com/embed/bpt-EA6pLmY" title="Прохождение всей Террарии от начала до конца!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
      <p> ПО постройке домов</p>
-     <iframe width="1400" height="636" src="https://www.youtube.com/embed/cJAQrDl7w0Y" title="Как красиво строить в Террарии? {Гайды Terraria#1}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" ></iframe>
+     <iframe width="100%" height="636" src="https://www.youtube.com/embed/cJAQrDl7w0Y" title="Как красиво строить в Террарии? {Гайды Terraria#1}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" ></iframe>
   </article>
 </section>
 <section >
