--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 Terraria получила множество положительных оценок игровой прессы. Рецензенты похвалили реиграбельность, большое количество предметов и существ, делающее исследование игрового мира ещё интереснее. Кроме того, они одобрили двумерную графику, сходную с компьютерными играми времён 16-разрядной игровой приставки SNES, и стилизованный под чиптюн саундтрек. Игровые издания часто сравнивали игровой процесс Terraria с Minecraft. Terraria добилась огромного коммерческого успеха: по состоянию на 2020 год на всех платформах было продано свыше 30 миллионов копий. В 2013 году Эндрю Спинкс заявил, что планирует выпустить сиквел — Terraria 2. В 2015 году Re-Logic анонсировала спин-офф Terraria: Otherworld, однако в 2018 году игра была отменена.</p>
 <section >
   <article class="mitw">
-      <p> Видио гайды </p>
+      <h2> Видио гайды </h2>
      <iframe width="100%" height="636" src="https://www.youtube.com/embed/bpt-EA6pLmY" title="Прохождение всей Террарии от начала до конца!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
-     <p> ПО постройке домов</p>
+     <h2> ПО постройке домов</h2>
      <iframe width="100%" height="636" src="https://www.youtube.com/embed/cJAQrDl7w0Y" title="Как красиво строить в Террарии? {Гайды Terraria#1}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" ></iframe>
   </article>
 </section>
